api/kompose/foodadvisor-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert -f ../docker-compose.yml
    kompose.version: 1.27.0 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: foodadvisor
  name: foodadvisor
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: foodadvisor
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -f ../docker-compose.yml
        kompose.version: 1.27.0 (HEAD)
      creationTimestamp: null
      labels:
        io.kompose.network/foodadvisor: "true"
        io.kompose.service: foodadvisor
    spec:
      containers:
        - env:
            - name: ADMIN_JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: ADMIN_JWT_SECRET
                  name: env
            - name: DATABASE_CLIENT
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_CLIENT
                  name: env
            - name: DATABASE_HOST
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_HOST
                  name: env
            - name: DATABASE_NAME
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_NAME
                  name: env
            - name: DATABASE_PASSWORD
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_PASSWORD
                  name: env
            - name: DATABASE_PORT
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_PORT
                  name: env
            - name: DATABASE_USERNAME
              valueFrom:
                configMapKeyRef:
                  key: DATABASE_USERNAME
                  name: env
            - name: HOST
              valueFrom:
                configMapKeyRef:
                  key: HOST
                  name: env
            - name: JWT_SECRET
              valueFrom:
                configMapKeyRef:
                  key: JWT_SECRET
                  name: env
            - name: NODE_ENV
              valueFrom:
                configMapKeyRef:
                  key: NODE_ENV
                  name: env
            - name: PORT
              valueFrom:
                configMapKeyRef:
                  key: PORT
                  name: env
            - name: STRAPI_ADMIN_CLIENT_PREVIEW_SECRET
              valueFrom:
                configMapKeyRef:
                  key: STRAPI_ADMIN_CLIENT_PREVIEW_SECRET
                  name: env
            - name: STRAPI_ADMIN_CLIENT_URL
              valueFrom:
                configMapKeyRef:
                  key: STRAPI_ADMIN_CLIENT_URL
                  name: env
          image: bulentkucuk/foodadvisor
          name: foodadvisor
          ports:
            - containerPort: 1337
          resources: {}
      restartPolicy: Always
status: {}
